hphp/hack/test/typecheck/attributes/typeparam_method.php.exp
ERROR: File "typeparam_method.php", line 9, characters 23-23:
Too few positional arguments (required 1 but got 0) (Typing[4104])
  File "typeparam_method.php", line 5, characters 19-29:
  Definition is here
